bindings/c/include/zlink.h

typedef unsigned __int32 uint32_t;
typedef struct zlink_msg_t
{
#if defined(_MSC_VER) && (defined(_M_X64) || defined(_M_ARM64))
    __declspec(align (8)) unsigned char _[64];
#elif defined(_MSC_VER)                                                        \
  && (defined(_M_IX86) || defined(_M_ARM_ARMV7VE) || defined(_M_ARM))
    __declspec(align (4)) unsigned char _[64];
#elif defined(__GNUC__) || defined(__INTEL_COMPILER)                           \
  || (defined(__SUNPRO_C) && __SUNPRO_C >= 0x590)                              \
  || (defined(__SUNPRO_CC) && __SUNPRO_CC >= 0x590)
    unsigned char _[64] __attribute__ ((aligned (sizeof (void *))));
#else
    unsigned char _[64];
#endif
} zlink_msg_t;
typedef struct zlink_routing_id_t
{
    uint8_t size;
    uint8_t data[255];
} zlink_routing_id_t;
typedef void (zlink_free_fn) (void *data_, void *hint_);
typedef struct zlink_actor_route_t
{
    zlink_actor_ref_t actor;
    uint32_t joined;
    zlink_routing_id_t joined_spot_rid;
} zlink_actor_route_t;
typedef enum zlink_part_flag_t
{
    ZLINK_PART_FINAL = 0,
    ZLINK_PART_MORE = 1
} zlink_part_flag_t;
ZLINK_EXPORT zlink_config_result_t zlink_set_spot_node_option (
  void *handle_,
  zlink_spot_node_option_t option_,
  const void *optval_,
  size_t optvallen_);
ZLINK_EXPORT zlink_config_result_t zlink_get_spot_node_option (
  void *handle_,
  zlink_spot_node_option_t option_,
  void *optval_,
  size_t *optvallen_);
ZLINK_EXPORT zlink_submit_result_t zlink_publish_part (
  void *subject_,
  const char *topic_id_,
  zlink_msg_t *part_,
  zlink_send_flags_t flags_,
  zlink_part_flag_t part_flag_);
ZLINK_EXPORT zlink_config_result_t zlink_set_subscription (void *handle_,
                                          const char *filter_);
ZLINK_EXPORT zlink_config_result_t zlink_unset_subscription (void *handle_,
                                            const char *filter_);
ZLINK_EXPORT zlink_recv_result_t zlink_subscribe_part (
  void *sub_,
  const zlink_routing_id_t **source_rid_out_,
  char *topic_id_buf_,
  size_t topic_id_capacity_,
  size_t *topic_id_len_out_,
  zlink_msg_t *part_out_,
  zlink_part_flag_t *has_more_out_,
  zlink_recv_flags_t flags_);
ZLINK_EXPORT zlink_recv_result_t zlink_xpub_recv_part (
  void *xpub_,
  const zlink_routing_id_t **source_rid_out_,
  int *subscribed_out_,
  char *topic_id_buf_,
  size_t topic_id_capacity_,
  size_t *topic_id_len_out_,
  zlink_recv_flags_t flags_);
ZLINK_EXPORT void *zlink_registry_new (void *ctx);
ZLINK_EXPORT zlink_bind_result_t zlink_registry_bind (void *registry,
                                      const char *pub_endpoint,
                                      const char *router_endpoint);
ZLINK_EXPORT zlink_config_result_t zlink_registry_set (
  void *registry,
  zlink_registry_option_t option,
  uint32_t value);
ZLINK_EXPORT uint32_t zlink_registry_get (
  void *registry,
  zlink_registry_option_t option,
  zlink_config_result_t *error_out);
ZLINK_EXPORT zlink_config_result_t zlink_registry_add_peer (void *registry,
                                      const char *peer_pub_endpoint);
ZLINK_EXPORT zlink_close_result_t zlink_registry_destroy (void **registry_p);
ZLINK_EXPORT void *zlink_discovery_new (void *ctx,
                                        zlink_auto_connect_type_t auto_connect_type,
                                        const char *channel_name);
ZLINK_EXPORT zlink_connect_result_t zlink_discovery_connect_registry (
  void *discovery, const char *registry_endpoint);
ZLINK_EXPORT zlink_config_result_t zlink_discovery_resolve_spot (
  void *discovery_,
  const zlink_routing_id_t *spot_rid_,
  zlink_routing_id_t *owner_node_rid_out_);
ZLINK_EXPORT zlink_config_result_t zlink_discovery_resolve_actor (
  void *discovery_,
  const char *actor_id_,
  zlink_actor_route_t *route_out_);
ZLINK_EXPORT zlink_config_result_t zlink_discovery_set_value (void *discovery_, int64_t value_);
ZLINK_EXPORT zlink_config_result_t zlink_discovery_get_value (void *discovery_,
                                            int64_t *value_out_);
ZLINK_EXPORT zlink_close_result_t zlink_discovery_destroy (void **discovery_p);
ZLINK_EXPORT void *zlink_spot_new (void *node);
ZLINK_EXPORT zlink_close_result_t zlink_spot_destroy (void **spot_p);
typedef struct zlink_spot_node_options_t
{
    zlink_spot_node_mode_t mode;
} zlink_spot_node_options_t;
ZLINK_EXPORT void *zlink_spot_node_new (
  void *ctx,
  const zlink_spot_node_options_t *options);
ZLINK_EXPORT zlink_close_result_t zlink_spot_node_destroy (void **node_p);
ZLINK_EXPORT zlink_config_result_t zlink_spot_node_entry_spot (
  void *node_,
  void **spot_out_);
ZLINK_EXPORT zlink_config_result_t zlink_spot_node_spot_lookup (
  void *node_,
  const zlink_routing_id_t *spot_rid_,
  void **spot_out_);
ZLINK_EXPORT zlink_config_result_t zlink_spot_node_spot_get_or_new (
  void *node_,
  const zlink_routing_id_t *spot_rid_,
  void **spot_out_,
  uint32_t *created_out_);
ZLINK_EXPORT zlink_bind_result_t zlink_spot_node_bind (void *node, const char *endpoint);
ZLINK_EXPORT zlink_connect_result_t zlink_spot_node_connect_peer (void *node,
                                               const char *peer_endpoint);
ZLINK_EXPORT zlink_connect_result_t zlink_spot_node_disconnect_peer (
  void *node, const char *peer_endpoint);
ZLINK_EXPORT zlink_connect_result_t zlink_spot_node_disconnect_peer_rid (
  void *node, const zlink_routing_id_t *target_node_rid);
ZLINK_EXPORT zlink_connect_result_t zlink_spot_node_connect_router_channel_peer (
  void *node,
  const char *channel_name,
  const char *endpoint);
ZLINK_EXPORT zlink_connect_result_t
zlink_spot_node_disconnect_router_channel_peer (
  void *node,
  const char *channel_name,
  const char *endpoint);
ZLINK_EXPORT zlink_connect_result_t
zlink_spot_node_disconnect_router_channel_peer_rid (
  void *node,
  const char *channel_name,
  const zlink_routing_id_t *peer_rid);
ZLINK_EXPORT zlink_config_result_t zlink_spot_node_attach_discovery (void *node,
                                                   void *discovery);
ZLINK_EXPORT zlink_config_result_t
zlink_spot_node_attach_router_channel_discovery (
  void *node,
  const char *channel_name,
  void *discovery);
ZLINK_EXPORT zlink_config_result_t zlink_spot_node_attach_channel_dealer (
  void *node_,
  void *discovery_,
  void *dealer_);
ZLINK_EXPORT zlink_config_result_t zlink_spot_node_attach_channel_dealer_manual (
  void *node_,
  const char *channel_name_,
  void *dealer_);
ZLINK_EXPORT zlink_config_result_t zlink_spot_node_attach_pub_ingress (
  void *node_,
  void *pub_);
typedef struct zlink_spot_node_status_t
{
    char channel_name[256];
    char local_endpoint[256];
    zlink_routing_id_t node_routing_id;
    zlink_spot_node_state_t state;
    uint32_t configured_peer_count;
    uint32_t active_peer_count;
    uint32_t connected_peer_count;
    uint32_t subject_count;
    uint32_t ready_subject_count;
    uint32_t disconnected_sub_target_count;
    uint32_t disconnected_routed_target_count;
    int32_t last_error;
    uint64_t last_changed_ms;
} zlink_spot_node_status_t;
typedef struct zlink_spot_node_peer_entry_t
{
    char channel_name[256];
    char local_endpoint[256];
    char peer_endpoint[256];
    zlink_spot_peer_source_t source;
    zlink_spot_peer_kind_t kind;
    zlink_spot_peer_state_t state;
    uint32_t weight;
    uint64_t connected_since_ms;
    uint64_t last_changed_ms;
} zlink_spot_node_peer_entry_t;
typedef struct zlink_registry_status_t
{
    uint32_t registry_id;
    char bind_endpoint[256];
    zlink_registry_state_t state;
    uint32_t topology_entry_count;
    uint32_t peer_registry_count;
    uint32_t connected_peer_registry_count;
    uint64_t list_seq;
    int32_t last_error;
    uint64_t last_changed_ms;
} zlink_registry_status_t;
typedef struct zlink_registry_service_summary_entry_t
{
    zlink_auto_connect_type_t auto_connect_type;
    zlink_service_role_t service_role;
    char channel_name[256];
    uint32_t total_count;
    uint32_t connecting_count;
    uint32_t ready_count;
    uint32_t error_count;
    uint32_t stopped_count;
    uint64_t last_reported_ms;
} zlink_registry_service_summary_entry_t;
typedef struct zlink_registry_service_summary_filter_t
{
    zlink_auto_connect_type_t auto_connect_type;
    zlink_service_role_t service_role;
    char channel_name[256];
} zlink_registry_service_summary_filter_t;
typedef struct zlink_member_peer_entry_t
{
    zlink_auto_connect_type_t auto_connect_type;
    zlink_service_role_t service_role;
    char channel_name[256];
    char endpoint[256];
    uint32_t weight;
    zlink_routing_id_t routing_id;
    int64_t value;
} zlink_member_peer_entry_t;
ZLINK_EXPORT zlink_config_result_t zlink_spot_node_status_snapshot (
  void *node_,
  zlink_spot_node_status_t *out_);
ZLINK_EXPORT zlink_config_result_t zlink_spot_node_peers_snapshot (
  void *node_,
  zlink_spot_node_peer_entry_t *entries_,
  size_t *count_);
ZLINK_EXPORT zlink_config_result_t zlink_registry_status_snapshot (
  void *registry_,
  zlink_registry_status_t *out_);
ZLINK_EXPORT zlink_config_result_t zlink_registry_service_summary_snapshot (
  void *registry_,
  const zlink_registry_service_summary_filter_t *filter_,
  zlink_registry_service_summary_entry_t *entries_,
  size_t *count_);
ZLINK_EXPORT zlink_config_result_t zlink_registry_member_peers (
  void *registry_,
  const char *channel_name_,
  zlink_member_peer_entry_t *entries_,
  size_t *count_);
ZLINK_EXPORT zlink_config_result_t zlink_discovery_member_peers (void *discovery_,
                                               zlink_member_peer_entry_t *entries_,
                                               size_t *count_);
typedef struct zlink_registry_topology_entry_t
{
    zlink_auto_connect_type_t auto_connect_type;
    zlink_routing_id_t routing_id;
    zlink_service_kind_t service_kind;
    zlink_service_role_t service_role;
    char channel_name[256];
    char endpoint[256];
    zlink_topology_source_t source;
    zlink_topology_state_t state;
    uint32_t desired_count;
    uint32_t ready_count;
    uint32_t error_code;
    uint64_t last_reported_ms;
} zlink_registry_topology_entry_t;
typedef struct zlink_registry_topology_filter_t
{
    zlink_auto_connect_type_t auto_connect_type;
    zlink_service_kind_t service_kind;
    zlink_service_role_t service_role;
    char channel_name[256];
    zlink_routing_id_t routing_id;
    zlink_topology_state_t state;
    zlink_topology_source_t source;
} zlink_registry_topology_filter_t;
ZLINK_EXPORT zlink_config_result_t zlink_registry_topology_snapshot (
  void *registry,
  zlink_registry_topology_entry_t *entries,
  size_t *count);
ZLINK_EXPORT zlink_config_result_t zlink_registry_topology_query (
  void *registry,
  const zlink_registry_topology_filter_t *filter,
  zlink_registry_topology_entry_t *entries,
  size_t *count);
ZLINK_EXPORT void *zlink_registry_query_client_new (void *ctx);
ZLINK_EXPORT zlink_connect_result_t zlink_registry_query_client_connect (void *client,
                                                      const char *endpoint);
ZLINK_EXPORT zlink_config_result_t zlink_registry_query_snapshot (
  void *client,
  const zlink_registry_topology_filter_t *filter,
  zlink_registry_topology_entry_t *entries,
  size_t *count);
ZLINK_EXPORT zlink_close_result_t zlink_registry_query_destroy (void **client_p);
typedef void (zlink_thread_fn) (void *);